tests/ui/to_field_attribute_without_args.rs
use mapper_impl::Mapper;

#[derive(Mapper)]
pub struct User{
    #[to()]
    pub name: String
}

pub struct Person{
    pub name: String
}

fn main(){}